feat: adds endpoints documentation
